styles.css
/* ... */
#machine-learning-modal-initiate-next-button {
  width: 60px;
  margin-left: 3px;
}

#machine-learning-modal-initiate-all-images-button {
  margin-right: 3px;
  padding-left: 5px;
  padding-right: 5px;
  width: 81px;
}

#machine-learning-modal-initiate-new-images-button {
  margin-left: 3px;
  width: 81px;
}

#machine-learning-modal-no-objects-close-button {
  margin-top: 5px;
}

#machine-learning-modal-generated-labels-outer-container {
  padding-top: 12px;
  position: relative;
  height: 152px;
}

#machine-learning-modal-generated-labels-inner-container {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

#machine-learning-modal-generated-labels {
  margin-left: auto;
  margin-right: auto;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: 100px;
  /* firefox */
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#machine-learning-modal-generated-labels::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#machine-learning-modal-generated-labels::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 10px;
}

#machine-learning-modal-generated-labels::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

#machine-learning-modal-generated-labels-table {
  margin-left: auto;
  margin-right: auto;
}

.machine-learning-modal-generated-labels-row {
  padding-left: 5px;
  padding-right: 1px;
  cursor: pointer;
  border-bottom: 1px solid #f7f7f7;
}

.machine-learning-modal-generated-labels-edit-icon {
  width: 8px;
  margin-top: 5px;
  float: left;
}

.machine-learning-modal-generated-labels-input {
  margin-left: 12px;
  outline: none;
  white-space: pre;
  padding-right: 5px
}

#machine-learning-modal-generated-labels-submit-button {
  margin-top: 5px;
  padding-top: 6px;
  padding-bottom: 5px;
  margin-left: 3px;
  width: 60px;
}

#machine-learning-modal-generated-labels-buttons {
  margin-top: 8px;
}

.reverse-icon {
  transform: scale(-1, 1);
}

#left-side-bar {
  width: 57px;
  padding-top: 9px;
  text-align: center;
  float: left;
  background-color: white;
  height: 100vh;
  max-height: calc(100vh - 44px);
  overflow-y: auto;
  overflow-x: hidden;
  border-right: solid;
  border-left: solid;
  border-left-color: #80808026;
  border-right-color: rgb(197, 197, 197);
  border-width: 1px;
}

#right-side-bar {
  width: 208px;
  padding-top: 8px;
  float: right;
  background-color: white;
  height: calc(100vh - 43px);
  border-right: solid;
  border-left: solid;
  border-width: 1px;
  border-color: rgb(197, 197, 197);
  border-right-width: 0px;
}

#right-side-bar:hover {
  cursor: default;
}

.right-side-bar-component {
  display: block;
  left: 0;
  padding-top: 3px;
}

.right-side-bar-component-title {
  height: 18px;
  font-size: 16px;
  padding-left: 5px;
  border-bottom: solid;
  border-bottom-color: #4e4b4b26;
  border-bottom-width: 1px;
  user-select: none;
}

#right-side-bar-components {
  font-family: Arial, Helvetica, sans-serif;
}

#label-list {
  width: 100%;
}

.labelListItem {
  padding-left: 4px;
  padding-bottom: 1px;
}

#labels-list-overflow-parent {
  overflow-x: auto;
  overflow-y: auto;
  height: calc((100vh - 287px) / 2);
  border-bottom: solid;
  border-bottom-color: #4e4b4b26;
  border-bottom-width: 1px;
  /* firefox */
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#labels-list-overflow-parent::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#labels-list-overflow-parent::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 10px;
}

#labels-list-overflow-parent::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

#image-list-component {
  padding-top: 0px;
}

#image-list-title-parent {
  position: relative;
  height: 23px;
}

#image-list-title-text {
  position: absolute;
  bottom: 0.5px;
}

#upload-images-button {
  text-align: center;
  position: relative;
  float: right;
  margin-right: 0px;
  margin-top: 1px;
}

#upload-images-icon {
  width: 14px;
  padding-top: 3.6px;
  padding-bottom: 0px;
  padding-left: 3px;
  padding-right: 3px;
}

#upload-images-button-popup {
  margin-top: -29px;
  margin-left: 84px;
}

#remove-images-button-container {
  margin-top: 1px;
  padding-right: 4px;
  padding-top: 0px;
  float: right;
}

#remove-images-button-icon {
  width: 15px;
  padding-top: 3px;
  padding-left: 3px;
  padding-right: 3px;
}

#remove-images-button-popup {
  margin-top: -29px;
  margin-left: 90px;
}

#image-list-overflow-parent {
  overflow-x: hidden;
  overflow-y: auto;
  max-height: calc((100vh + 111px) / 2 - 1px);
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#image-list-overflow-parent div:nth-child(odd) {
  border-right: 1px solid #4e4b4b26;
}

#image-list-overflow-parent::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#image-list-overflow-parent::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 10px;
}

#image-list-overflow-parent::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

#window-dim {
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 2;
  background-color: '';
  transition-property: background-color;
  transition-duration: 0.5s;
  transition-timing-function: linear;
  -webkit-transition-property: background-color;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-timing-function: linear;
  -moz-transition-property: background-color;
  -moz-transition-duration: 0.5s;
  -moz-transition-timing-function: linear;
  -o-transition-property: background-color;
  -o-transition-duration: 0.5s;
  -o-transition-timing-function: linear;
}

#zoom-overflow {
  overflow: auto;
  z-index: 1;
  /* firefox */
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#zoom-overflow::-webkit-scrollbar {
  width: 6px;
  height: 7px;
}

#zoom-overflow::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#zoom-overflow::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 6px;
}
/* ... */

